added header image and text

--- a/index.html
+++ b/index.html
@@ -8,8 +8,32 @@
     <script type="module" src="script.js"></script>
   </head>
   <body>
-    <main>
+    <header class="header">
+      <!-- Put in a header with a picture and heading -->
       <h1>Space through the eyes of mythology</h1>
+     
+    </header>
+    <main>
+    <!-- Main part with pictures and text -->
+    <!-- Section 1 -->
+      <section class="Mesopotamia"></section>
+      <img src="" alt="">
+      <p>The people of Mesopotamia </p>
+    <!-- Section 2 -->
+     <section class="South-America"></section>
+      <img src="" alt="">
+    <!-- Section 3 -->
+      <section class="Egypt"></section>
+      <img src="" alt="">
+    <!-- Section 4 -->
+      <section class="Greece"></section>
+      <img src="" alt="">
+    <!-- Section 5 -->
+     <section class="Japan"></section>
+      <img src="" alt="">
+    <!-- Section 6 -->
+      <section class="India"></section>
+      <img src="" alt="">
     </main>
   </body>
 </html>
