Added text and images to mercury section

--- a/index.html
+++ b/index.html
@@ -10,30 +10,36 @@
   <body>
     <header class="header">
       <!-- Put in a header with a picture and heading -->
-      <h1>Space through the eyes of mythology</h1>
+      <h1>Space through the eyes of (ancient) mythology</h1>
      
     </header>
     <main>
     <!-- Main part with pictures and text -->
     <!-- Section 1 -->
       <section class="Mesopotamia"></section>
-      <img src="" alt="">
-      <p>The people of Mesopotamia </p>
+      <img src="img/mercury.jpg" alt="An image of the planet Mercury with colors">
+      <img src="img/nabu.jpg" alt="Image of the Mesopotamian god Nabu.">
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea saepe amet commodi doloremque rem maxime quaerat? Obcaecati eum, adipisci, soluta voluptatum non eligendi quam quod optio facere aperiam perspiciatis distinctio. </p>
     <!-- Section 2 -->
      <section class="South-America"></section>
       <img src="" alt="">
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea saepe amet commodi doloremque rem maxime quaerat? Obcaecati eum, adipisci, soluta voluptatum non eligendi quam quod optio facere aperiam perspiciatis distinctio. </p>
     <!-- Section 3 -->
       <section class="Egypt"></section>
       <img src="" alt="">
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea saepe amet commodi doloremque rem maxime quaerat? Obcaecati eum, adipisci, soluta voluptatum non eligendi quam quod optio facere aperiam perspiciatis distinctio. </p>
     <!-- Section 4 -->
       <section class="Greece"></section>
       <img src="" alt="">
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea saepe amet commodi doloremque rem maxime quaerat? Obcaecati eum, adipisci, soluta voluptatum non eligendi quam quod optio facere aperiam perspiciatis distinctio. </p>
     <!-- Section 5 -->
      <section class="Japan"></section>
       <img src="" alt="">
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea saepe amet commodi doloremque rem maxime quaerat? Obcaecati eum, adipisci, soluta voluptatum non eligendi quam quod optio facere aperiam perspiciatis distinctio. </p>
     <!-- Section 6 -->
       <section class="India"></section>
       <img src="" alt="">
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea saepe amet commodi doloremque rem maxime quaerat? Obcaecati eum, adipisci, soluta voluptatum non eligendi quam quod optio facere aperiam perspiciatis distinctio. </p>
     </main>
   </body>
 </html>
