Added image credits to figure 1 and 2

--- a/index.html
+++ b/index.html
@@ -17,27 +17,40 @@
     <!-- Main part with pictures and text -->
     <!-- Section 1 -->
       <section class="Mesopotamia"></section>
-      <img src="img/mercury.jpg" alt="An image of the planet Mercury with colors">
-      <img src="img/nabu.jpg" alt="Image of the Mesopotamian god Nabu.">
+      <figure>
+        <img src="img/mercury.jpg" alt="An image of the planet Mercury with colors" style="width:100%">
+        <figcaption>Fig. 1. Image of the planet Mercury in black and white and colors side by side. Credits: NASA/Johns Hopkins University Applied Physics Laboratory/Carnegie Institution of Washington.
+        </figcaption>
+      </figure>
+      <figure>
+        <img src="img/nabu.jpg" alt="Image of the Mesopotamian god Nabu." style="width:100%">
+        <figcaption>Fig. 2. Colossal statue of the god Nabu, 8th century BCE. From Nimrud, Mesopotamia, Iraq. Credits: Osama Shukir Muhammed Amin FRCP(Glasg), CC BY-SA 4.0 <https://creativecommons.org/licenses/by-sa/4.0>, via Wikimedia Commons.
+        </figcaption>
+      </figure>
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea saepe amet commodi doloremque rem maxime quaerat? Obcaecati eum, adipisci, soluta voluptatum non eligendi quam quod optio facere aperiam perspiciatis distinctio. </p>
     <!-- Section 2 -->
      <section class="South-America"></section>
+      <img src="img/sun.webp" alt="Image of the sun">
       <img src="" alt="">
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea saepe amet commodi doloremque rem maxime quaerat? Obcaecati eum, adipisci, soluta voluptatum non eligendi quam quod optio facere aperiam perspiciatis distinctio. </p>
     <!-- Section 3 -->
       <section class="Egypt"></section>
       <img src="" alt="">
+      <img src="" alt="">
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea saepe amet commodi doloremque rem maxime quaerat? Obcaecati eum, adipisci, soluta voluptatum non eligendi quam quod optio facere aperiam perspiciatis distinctio. </p>
     <!-- Section 4 -->
       <section class="Greece"></section>
+      <img src="" alt="">
       <img src="" alt="">
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea saepe amet commodi doloremque rem maxime quaerat? Obcaecati eum, adipisci, soluta voluptatum non eligendi quam quod optio facere aperiam perspiciatis distinctio. </p>
     <!-- Section 5 -->
      <section class="Japan"></section>
       <img src="" alt="">
+      <img src="" alt="">
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea saepe amet commodi doloremque rem maxime quaerat? Obcaecati eum, adipisci, soluta voluptatum non eligendi quam quod optio facere aperiam perspiciatis distinctio. </p>
     <!-- Section 6 -->
       <section class="India"></section>
+      <img src="" alt="">
       <img src="" alt="">
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea saepe amet commodi doloremque rem maxime quaerat? Obcaecati eum, adipisci, soluta voluptatum non eligendi quam quod optio facere aperiam perspiciatis distinctio. </p>
     </main>
